Apply emum to rest api server
